--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -3,6 +3,68 @@ EditCampaignScreen As screen:
         =UpdateContext({isDeleteVisible :false, isSendVisible: false});
         Set(varBase64Only, Blank());
 
+    Container8 As groupContainer.horizontalAutoLayoutContainer:
+        Height: =40
+        LayoutGap: =40
+        LayoutMode: =LayoutMode.Auto
+        Width: =910
+        X: =227
+        Y: =681
+        ZIndex: =1
+
+        Button12_1 As button:
+            Fill: =RGBA(166, 166, 166, 1)
+            FillPortions: =1
+            OnSelect: =Navigate(CampaignScreen);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            X: =202
+            Y: =684
+            ZIndex: =1
+
+        Button12_5 As button:
+            FillPortions: =1
+            OnSelect: =Navigate(PreviewCampaignScreen);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Preview"
+            X: =447
+            Y: =684
+            ZIndex: =2
+
+        Button12 As button:
+            FillPortions: =1
+            OnSelect: |
+                =SubmitForm(EditCampaignForm);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Save"
+            X: =689
+            Y: =684
+            ZIndex: =3
+
+        Button11 As button:
+            Fill: =RGBA(255, 0, 0, 1)
+            FillPortions: =1
+            HoverFill: =ColorFade(Self.Fill, -20%)
+            OnSelect: |-
+                =UpdateContext({isDeleteVisible:true})
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Delete"
+            X: =930
+            Y: =684
+            ZIndex: =4
+
     EditCampaignForm As form:
         DataSource: =NewCampaign
         Height: =629
@@ -11,7 +73,7 @@ EditCampaignScreen As screen:
         Width: =864
         X: =240
         Y: =27
-        ZIndex: =3
+        ZIndex: =2
 
         Template_DataCard2 As typedDataCard.comboBoxEditCard:
             BorderStyle: =BorderStyle.Solid
@@ -344,30 +406,6 @@ EditCampaignScreen As screen:
                 Y: =DataCardKey3.Y
                 ZIndex: =4
 
-    Button11 As button:
-        OnSelect: |-
-            =UpdateContext({isDeleteVisible:true})
-        RadiusBottomLeft: =0
-        RadiusBottomRight: =0
-        RadiusTopLeft: =0
-        RadiusTopRight: =0
-        Text: ="Delete"
-        X: =930
-        Y: =684
-        ZIndex: =4
-
-    Button12 As button:
-        OnSelect: |
-            =SubmitForm(EditCampaignForm);
-        RadiusBottomLeft: =0
-        RadiusBottomRight: =0
-        RadiusTopLeft: =0
-        RadiusTopRight: =0
-        Text: ="Save"
-        X: =683
-        Y: =684
-        ZIndex: =5
-
     Icon5 As icon.BackArrow:
         Height: =48
         Icon: =Icon.BackArrow
@@ -375,18 +413,7 @@ EditCampaignScreen As screen:
         Width: =58
         X: =16
         Y: =27
-        ZIndex: =9
-
-    Button12_1 As button:
-        OnSelect: =Navigate(CampaignScreen);
-        RadiusBottomLeft: =0
-        RadiusBottomRight: =0
-        RadiusTopLeft: =0
-        RadiusTopRight: =0
-        Text: ="Cancel"
-        X: =441
-        Y: =684
-        ZIndex: =10
+        ZIndex: =3
 
     Button1 As button:
         Height: =55
@@ -395,74 +422,14 @@ EditCampaignScreen As screen:
         Width: =223
         X: =1116
         Y: =572
-        ZIndex: =15
-
-    DeletePopup_2 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =15
-
-        Rectangle1_3 As rectangle:
-            Fill: =RGBA(56, 96, 178, 0.7)
-            Height: =338
-            Visible: =isDeleteVisible
-            Width: =897
-            X: =240
-            Y: =90
-            ZIndex: =11
-
-        Button8_3 As button:
-            Fill: =RGBA(0, 134, 208, 1)
-            Height: =44
-            OnSelect: |-
-                =UpdateContext({varShowPopup:false}); Navigate(CampaignScreen);
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
-            Text: ="Cancel"
-            Visible: =isDeleteVisible
-            Width: =198
-            X: =704
-            Y: =338
-            ZIndex: =12
-
-        Button7_3 As button:
-            Fill: =RGBA(0, 134, 208, 1)
-            Height: =44
-            OnSelect: |-
-                =UpdateContext({varShowPopup:false}); Remove([@NewCampaign], ExistingCampaignGallery.Selected); If (IsEmpty(Errors([@NewCampaign], ExistingCampaignGallery.Selected)), Back())
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
-            Text: ="Delete"
-            Visible: =isDeleteVisible
-            Width: =198
-            X: =456
-            Y: =338
-            ZIndex: =13
-
-        Label8_2 As label:
-            Align: =Align.Center
-            Color: =RGBA(255, 255, 255, 1)
-            Height: =108
-            Size: =15
-            Text: ="Are you sure you want to delete the campaign?"
-            Visible: =isDeleteVisible
-            Width: =385
-            X: =490
-            Y: =173
-            ZIndex: =14
+        ZIndex: =8
 
     Container5 As groupContainer.manualLayoutContainer:
         Height: =346
         Width: =222
         X: =18
         Y: =281
-        ZIndex: =17
+        ZIndex: =9
 
         Label3 As label:
             AutoHeight: =true
@@ -522,7 +489,67 @@ EditCampaignScreen As screen:
         Width: =223
         X: =1116
         Y: =34
-        ZIndex: =18
+        ZIndex: =10
+
+    DeletePopup_2 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =15
+
+        Rectangle1_3 As rectangle:
+            Fill: =RGBA(56, 96, 178, 0.7)
+            Height: =338
+            Visible: =isDeleteVisible
+            Width: =897
+            X: =240
+            Y: =90
+            ZIndex: =4
+
+        Button8_3 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Navigate(CampaignScreen);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            Visible: =isDeleteVisible
+            Width: =198
+            X: =704
+            Y: =338
+            ZIndex: =5
+
+        Button7_3 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Remove([@NewCampaign], ExistingCampaignGallery.Selected); If (IsEmpty(Errors([@NewCampaign], ExistingCampaignGallery.Selected)), Back())
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Delete"
+            Visible: =isDeleteVisible
+            Width: =198
+            X: =456
+            Y: =338
+            ZIndex: =6
+
+        Label8_2 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Height: =108
+            Size: =15
+            Text: ="Are you sure you want to delete the campaign?"
+            Visible: =isDeleteVisible
+            Width: =385
+            X: =490
+            Y: =173
+            ZIndex: =7
 
     SendPopup_1 As group:
         Height: =5
@@ -538,7 +565,7 @@ EditCampaignScreen As screen:
             Width: =Parent.Width - 80
             X: =40
             Y: =40
-            ZIndex: =19
+            ZIndex: =11
 
         Button8_5 As button:
             Fill: =RGBA(255, 0, 0, 1)
@@ -555,7 +582,7 @@ EditCampaignScreen As screen:
             Width: =190
             X: =685
             Y: =338
-            ZIndex: =20
+            ZIndex: =12
 
         Button7_5 As button:
             Fill: =RGBA(0, 134, 208, 1)
@@ -572,7 +599,7 @@ EditCampaignScreen As screen:
             Width: =190
             X: =447
             Y: =338
-            ZIndex: =21
+            ZIndex: =13
 
         Label8_4 As label:
             Align: =Align.Center
@@ -583,5 +610,5 @@ EditCampaignScreen As screen:
             Width: =369
             X: =480
             Y: =173
-            ZIndex: =22
+            ZIndex: =14
 
