--- a/app/Src/EditTemplateScreen.fx.yaml
+++ b/app/Src/EditTemplateScreen.fx.yaml
@@ -2,16 +2,78 @@ EditTemplateScreen As screen:
     OnVisible: |-
         =UpdateContext({varShowPopup :false})
 
+    Container7 As groupContainer.horizontalAutoLayoutContainer:
+        Height: =40
+        LayoutGap: =40
+        LayoutMode: =LayoutMode.Auto
+        Width: =910
+        X: =227
+        Y: =681
+        ZIndex: =1
+
+        Button12_3 As button:
+            Fill: =RGBA(166, 166, 166, 1)
+            FillPortions: =1
+            HoverFill: =ColorFade(Self.Fill, -20%)
+            OnSelect: =Navigate(TemplatesScreen);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            X: =236
+            Y: =684
+            ZIndex: =1
+
+        Button12_4 As button:
+            FillPortions: =1
+            OnSelect: =Navigate(PreviewTemplateScreen);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Preview"
+            X: =213
+            Y: =684
+            ZIndex: =2
+
+        Button12_2 As button:
+            FillPortions: =1
+            OnSelect: =SubmitForm(EditTemplateForm);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Save"
+            X: =446
+            Y: =684
+            ZIndex: =3
+
+        Button11_2 As button:
+            Fill: =RGBA(255, 0, 0, 1)
+            FillPortions: =1
+            HoverFill: =ColorFade(Self.Fill, -20%)
+            OnSelect: |-
+                =UpdateContext({varShowPopup:true})
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Delete"
+            X: =663
+            Y: =684
+            ZIndex: =4
+
     EditTemplateForm As form:
         DataSource: =TemplateList
-        Height: =452
+        Height: =240
         Item: =TemplatesGallery.Selected
         NumberOfColumns: =1
         OnSuccess: =
         Width: =910
         X: =227
         Y: =195
-        ZIndex: =3
+        ZIndex: =2
 
         Attachments_DataCard2 As typedDataCard.attachmentsEditCard:
             BorderStyle: =BorderStyle.Solid
@@ -148,48 +210,6 @@ EditTemplateScreen As screen:
                 Y: =DataCardKey15.Y
                 ZIndex: =4
 
-    Button11_2 As button:
-        OnSelect: |-
-            =UpdateContext({varShowPopup:true})
-        RadiusBottomLeft: =0
-        RadiusBottomRight: =0
-        RadiusTopLeft: =0
-        RadiusTopRight: =0
-        Text: ="Delete"
-        X: =899
-        Y: =684
-        ZIndex: =4
-
-    Button12_2 As button:
-        OnSelect: =SubmitForm(EditTemplateForm);
-        RadiusBottomLeft: =0
-        RadiusBottomRight: =0
-        RadiusTopLeft: =0
-        RadiusTopRight: =0
-        Text: ="Save"
-        X: =662
-        Y: =684
-        ZIndex: =5
-
-    Icon5_3 As icon.BackArrow:
-        Height: =48
-        Icon: =Icon.BackArrow
-        OnSelect: =ResetForm(EditTemplateForm);Back();
-        X: =258
-        Y: =27
-        ZIndex: =9
-
-    Button12_3 As button:
-        OnSelect: =Navigate(TemplatesScreen);
-        RadiusBottomLeft: =0
-        RadiusBottomRight: =0
-        RadiusTopLeft: =0
-        RadiusTopRight: =0
-        Text: ="Cancel"
-        X: =429
-        Y: =684
-        ZIndex: =10
-
     Label7 As label:
         FontWeight: =FontWeight.Bold
         Height: =48
@@ -198,7 +218,7 @@ EditTemplateScreen As screen:
         Width: =759
         X: =358
         Y: =27
-        ZIndex: =15
+        ZIndex: =11
 
     DeletePopup_3 As group:
         Height: =5
@@ -214,7 +234,7 @@ EditTemplateScreen As screen:
             Width: =880
             X: =227
             Y: =90
-            ZIndex: =11
+            ZIndex: =7
 
         Button8_4 As button:
             Fill: =RGBA(0, 134, 208, 1)
@@ -230,7 +250,7 @@ EditTemplateScreen As screen:
             Width: =194
             X: =682
             Y: =338
-            ZIndex: =12
+            ZIndex: =8
 
         Button7_4 As button:
             Fill: =RGBA(0, 134, 208, 1)
@@ -246,7 +266,7 @@ EditTemplateScreen As screen:
             Width: =194
             X: =439
             Y: =338
-            ZIndex: =13
+            ZIndex: =9
 
         Label8_3 As label:
             Align: =Align.Center
@@ -258,5 +278,5 @@ EditTemplateScreen As screen:
             Width: =378
             X: =473
             Y: =173
-            ZIndex: =14
+            ZIndex: =10
 
